# neolisp

./: .gitignore  Cargo.toml  Docs.md  README.md  TODO.md  main  main.nl  test
.cargo/: config.toml
.github/workflows/: neolisp.yml
benches/: README.md  fibonacci.rs  machine_function_call.rs  machine_operator.rs
samples/: demo.nl  fib.nl  hello_world.nl  neolisp.nl  quasiquote.nl  rule110.nl  simple  simple.hex  simple.nl  simple.xxd  test.nl
samples/ffi/: bindings-to-libtest.nl  libtest  libtest.c
samples/std/: option.nl  result.nl
src/: ast.rs  builtin.rs  builtins.rs  cli.rs  compiler.rs  debugger.rs  docs.rs  emitter.rs  environment.rs  error.rs  eval.rs  expr_walker.rs  instruction.rs  intrinsic.rs  lib.rs  machine.rs  macro_expansion.rs  main.rs  parser.rs  repl.rs  symbol_table.rs  tests.rs  vm.rs  widgets.rs
src/compiler/: compiler.rs  decompiler.rs  header.rs  instruction.rs  ir.rs  mod.rs  stage1.rs  stage2.rs  test.rs
src/compiler2/: mod.rs  stage1.rs  stage2.rs  test.rs
src/hir_generator/: compiler.rs  hir.rs  mod.rs  test.rs
src/instruction_generator/: compiler.rs  mod.rs  test.rs
src/ir_generator/: compiler.rs  ir.rs  mod.rs  test.rs
src/lir_generator/: compiler.rs  lir.rs  mod.rs  test.rs
src/symbol_table/: mod.rs  test.rs
src/testdata/output/: neolisp__tests__emit_add_function.snap  neolisp__tests__emit_apply_function.snap  neolisp__tests__emit_fib_function.snap  neolisp__tests__emit_float.snap  neolisp__tests__emit_if_else.snap  neolisp__tests__emit_let.snap  neolisp__tests__emit_nil.snap  neolisp__tests__emit_quote.snap  neolisp__tests__emit_run_code.snap  neolisp__tests__emit_simple_let.snap  neolisp__tests__emit_string.snap  neolisp__tests__emit_test_code.snap  neolisp__tests__parse_test_bool_comment.snap  neolisp__tests__parse_test_bool_false.snap  neolisp__tests__parse_test_bool_true.snap  neolisp__tests__parse_test_def_func.snap  (+19 more)
src/type_checker/: mod.rs  test.rs
src/vm/: builtin.rs  decompile.rs  instruction.rs  machine.rs  mod.rs  opcode.rs  test.rs  value.rs
src/vm_old/: mod.rs  opcode.rs
syntax/: neolisp.vim
