[package]
name = "neolisp"
version = "0.1.0"
edition = "2021"


[dependencies]
chumsky = "0.9.3"
clap = { version = "4.5.17", features = ["derive"] }
rustyline = { version = "14.0.0", features = ["derive", "regex", "with-file-history"] }
anyhow = "1.0.87"
num-traits = "0.2.19"
num-derive = "0.4.2"
ratatui = "0.28.1"
crossterm = "0.28.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
criterion = "0.5.1"


[[bin]]
name = "neolisp"
path = "src/main.rs"

[lib]
name = "neolisp"
path = "src/lib.rs"


[[bench]]
name = "fibonacci"
harness = false

[[bench]]
name = "machine_operator"
harness = false

[[bench]]
name = "machine_function_call"
harness = false
