[package]
name = "neolisp"
version = "0.1.0"
edition = "2021"


[dependencies]
chumsky = "0.9.3"
clap = { version = "4.5.17", features = ["derive"] }
rustyline = { version = "15.0.0", features = ["derive", "regex", "with-file-history"] }
anyhow = "1.0.87"
num-traits = "0.2.19"
num-derive = "0.4.2"
ratatui = "0.29.0"
crossterm = "0.28.1"
ariadne = "0.5.0"
libffi = "3.2.0"
libloading = "0.8.6"

[dev-dependencies]
pretty_assertions = "1.4.1"
criterion = "0.5.1"
insta = { version = "1.41.1", features = ["yaml"] }

[package.metadata.clippy]
# Enable additional strict lints
# "pedantic" catches more minor issues
# "restriction" imposes stricter coding rules, but not all are practical
lints = ["pedantic", "restriction"]

[[bin]]
name = "neolisp"
path = "src/main.rs"

[lib]
name = "neolisp"
path = "src/lib.rs"


[[bench]]
name = "fibonacci"
harness = false

[[bench]]
name = "machine_operator"
harness = false

[[bench]]
name = "machine_function_call"
harness = false
